Update contact email address in index.html

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       不具合の報告やご要望がありましたら、以下のメールアドレスまでご連絡ください。
     </p>
     <p>
-      📧 <strong>yourmail@example.com</strong>
+      📧 <strong>motoyama.yamamoto.e@gmail.com</strong>
     </p>
 
     <h2>プライバシーポリシー</h2>
